tests/fixtures/LatestTests/VariableDeclarationTests/errors/reassignment_to_non_lvalue.fg
/; EXPECT_ERROR: AssignmentToNonLValue
var x:int = 10
5 <- x

